spacing fix

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -802,6 +802,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-right: 0.5rem;
 }
 
+.mt-1 {
+  margin-top: 0.25rem;
+}
+
 .block {
   display: block;
 }
@@ -1574,6 +1578,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
   .sm\:mr-5 {
     margin-right: 1.25rem;
+  }
+
+  .sm\:mt-2 {
+    margin-top: 0.5rem;
   }
 
   .sm\:block {
